// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should clear 1`] = `
<div
  className="search-navigator-facet-header-wrapper display-flex-center"
>
  <span
    className="search-navigator-facet-header display-flex-center"
  >
    <a
      href="#"
      onClick={[Function]}
    >
      <OpenCloseIcon
        className="little-spacer-right"
        open={false}
      />
      foo
    </a>
  </span>
  <span
    className="search-navigator-facet-header-value spacer-left spacer-right "
  >
    <span
      className="badge text-ellipsis"
      title="x_selected.3"
    >
      x_selected.3
    </span>
  </span>
  <Button
    className="search-navigator-facet-header-button button-small button-red"
    onClick={[MockFunction]}
  >
    clear
  </Button>
</div>
`;

exports[`should render closed facet with value 1`] = `
<div
  className="search-navigator-facet-header-wrapper display-flex-center"
>
  <span
    className="search-navigator-facet-header display-flex-center"
  >
    <a
      href="#"
      onClick={[Function]}
    >
      <OpenCloseIcon
        className="little-spacer-right"
        open={false}
      />
      foo
    </a>
  </span>
  <span
    className="search-navigator-facet-header-value spacer-left spacer-right "
  >
    <span
      className="badge text-ellipsis"
      title="foo"
    >
      foo
    </span>
  </span>
</div>
`;

exports[`should render closed facet without value 1`] = `
<div
  className="search-navigator-facet-header-wrapper display-flex-center"
>
  <span
    className="search-navigator-facet-header display-flex-center"
  >
    <a
      href="#"
      onClick={[Function]}
    >
      <OpenCloseIcon
        className="little-spacer-right"
        open={false}
      />
      foo
    </a>
  </span>
  <span
    className="search-navigator-facet-header-value spacer-left spacer-right "
  />
</div>
`;

exports[`should render open facet with value 1`] = `
<div
  className="search-navigator-facet-header-wrapper display-flex-center"
>
  <span
    className="search-navigator-facet-header display-flex-center"
  >
    <a
      href="#"
      onClick={[Function]}
    >
      <OpenCloseIcon
        className="little-spacer-right"
        open={true}
      />
      foo
    </a>
  </span>
  <span
    className="search-navigator-facet-header-value spacer-left spacer-right "
  >
    <span
      className="badge text-ellipsis"
      title="foo"
    >
      foo
    </span>
  </span>
</div>
`;

exports[`should render open facet without value 1`] = `
<div
  className="search-navigator-facet-header-wrapper display-flex-center"
>
  <span
    className="search-navigator-facet-header display-flex-center"
  >
    <a
      href="#"
      onClick={[Function]}
    >
      <OpenCloseIcon
        className="little-spacer-right"
        open={true}
      />
      foo
    </a>
  </span>
  <span
    className="search-navigator-facet-header-value spacer-left spacer-right "
  />
</div>
`;

exports[`should render with a spinner if loading 1`] = `
<div
  className="search-navigator-facet-header-wrapper display-flex-center"
>
  <span
    className="search-navigator-facet-header display-flex-center"
  >
    foo
  </span>
  <span
    className="search-navigator-facet-header-value spacer-left spacer-right "
  />
  <span
    className="little-spacer-right"
  >
    <DeferredSpinner
      timeout={100}
    />
  </span>
</div>
`;

exports[`should render without link 1`] = `
<div
  className="search-navigator-facet-header-wrapper display-flex-center"
>
  <span
    className="search-navigator-facet-header display-flex-center"
  >
    foo
  </span>
  <span
    className="search-navigator-facet-header-value spacer-left spacer-right "
  />
</div>
`;
